fix button z-index

--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,12 @@ body {
     background: radial-gradient(circle, white, rgba(black, 0.5));
     background-blend-mode: overlay;
     background-color: #000000;
+    z-index: 1;
 }
 
+button {
+  z-index: 2;
+}
 #root,.app{
     width:100%;
     height:100%;
